--- a/blog.html
+++ b/blog.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hon. Gisiri Maroa for Nyabasi West MCA 2027</title>
+    <meta name="description" content="Official blog for Hon. Gisiri Maroa, candidate for Nyabasi West MCA 2027. Join the movement for change, unity, and progress.">
+    <meta name="keywords" content="Gisiri Maroa, Nyabasi West, MCA 2027, Kenya, politics, campaign, poverty eradication, agriculture, youth empowerment">
+    <meta name="author" content="Hon. Gisiri Maroa Campaign Team">
+    <link rel="icon" type="image/png" href="blog/images/favicon.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/Gisiri blog/blog/images/favicon.png">
+    <!-- Bootstrap Icons CDN for social icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <style>
         body {
             font-family: 'Inter', 'Lato', Arial, sans-serif;
             background-color: #3b39be;
-            background-image: url('/Gisiri blog/blog/images/bg-pattern.jpg');
+            background-image: url('blog/images/bg-pattern.jpg');
             background-size: cover;
             background-attachment: fixed;
             background-repeat: no-repeat;
@@ -417,7 +422,7 @@
         /* Dark theme overrides */
         body.dark-mode {
             background-color: #181a1b !important;
-            background-image: url('/Gisiri blog/blog/images/karokeraro.jpg');
+            background-image: url('blog/images/karokeraro.jpg');
             color: #f5f5f5;
         }
         body.dark-mode .navbar,
@@ -466,7 +471,7 @@
         }
         body.dark-mode .hero-cta-btn {
             background: #ffc107;
-            color: #181a1b;
+            color: #181a1a;
         }
         body.dark-mode .hero-cta-btn:hover {
             background: #fffde7;
@@ -479,8 +484,6 @@
             color: #fff;
         }
     </style>
-    <!-- Bootstrap Icons CDN for social icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
     <!-- Check-in Modal Overlay -->
@@ -488,7 +491,7 @@
         <div class="card shadow-lg p-4" style="max-width:900px;width:98vw;border-radius:18px;background:#fff;">
             <div class="card-body text-center">
                 <h2 class="mb-3" style="font-family:'Playfair Display',serif;font-weight:800;letter-spacing:0.09em;color:#1a237e;">
-                    <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
+                    <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
                     Check In to Continue
                 </h2>
                 <p class="mb-4" style="font-size:1.18rem;letter-spacing:0.04em;">Please select your polling area to access the blog.<br><span style="color:#43a047;font-weight:700;">We are growing....</span></p>
@@ -537,7 +540,7 @@
     <!-- Hero Section with Picture, Title, and Message -->
     <section class="hero-section">
         <div class="container hero-img-container">
-            <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="Hon. Gisiri Maroa" class="hero-img hero-img-large shadow-lg mb-3">
+            <img src="blog/images/gisiri logo.jpg" alt="Hon. Gisiri Maroa" class="hero-img hero-img-large shadow-lg mb-3" loading="lazy">
             <div class="hero-title">Hon. Gisiri Maroa</div>
             <div class="hero-message">
                 <span style="font-size:1.25em;font-weight:700;">"Resilient. Determined. Ready for Change."</span><br>
@@ -549,24 +552,24 @@
             </div>
             <button class="hero-cta-btn" onclick="window.location='#engagement'">Join the Movement</button>
             <div class="social-icons">
-                <a href="#" title="Facebook"><i class="bi bi-facebook"></i></a>
-                <a href="#" title="Twitter"><i class="bi bi-twitter-x"></i></a>
-                <a href="#" title="WhatsApp"><i class="bi bi-whatsapp"></i></a>
-                <a href="#" title="YouTube"><i class="bi bi-youtube"></i></a>
+                <a href="#" title="Facebook" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
+                <a href="#" title="Twitter" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
+                <a href="#" title="WhatsApp" aria-label="WhatsApp"><i class="bi bi-whatsapp"></i></a>
+                <a href="#" title="YouTube" aria-label="YouTube"><i class="bi bi-youtube"></i></a>
             </div>
         </div>
     </section>
 
     <!-- Slogan Banner -->
     <div class="slogan-banner">
-        <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+        <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
         <span>#ResilientForNyabasi &nbsp; #GisiriForChange &nbsp; #Mchapakazi &nbsp; #AgriRevolution &nbsp; #EveryVoterCounts</span>
     </div>
 
     <!-- Check-in Feature (hidden, only bar after check-in) -->
     <section class="section" id="checkin" style="display:none;">
         <div class="section-title">
-            <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
             We are growing....
         </div>
         <div class="section-content text-center">
@@ -582,7 +585,7 @@
     <!-- Vision Section -->
     <section class="section" id="vision">
         <div class="section-title">
-            <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
             Our Vision for Nyabasi West
         </div>
         <div class="section-content">
@@ -602,7 +605,7 @@
     <!-- Campaign Pillars Section -->
     <section class="section" id="pillars">
         <div class="section-title">
-            <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
             Our Campaign Pillars
         </div>
         <div class="campaign-pillars">
@@ -648,7 +651,7 @@
     <!-- Engagement Section -->
     <section class="section engagement-section" id="engagement">
         <div class="engagement-title">
-            <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
             Engage. Participate. Decide.
         </div>
         <div class="engagement-content">
@@ -670,7 +673,7 @@
     <!-- Analysis Section -->
     <section class="section analysis-section" id="analysis">
         <div class="analysis-title">
-            <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
             Scientific Campaign & Data-Driven Strategy
         </div>
         <div class="analysis-content">
@@ -689,14 +692,14 @@
 
     <!-- Slogan Banner -->
     <div class="slogan-banner">
-        <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+        <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
         <span>#ResilientForNyabasi &nbsp; #GisiriForChange &nbsp; #EradicatePoverty &nbsp; #AgriRevolution &nbsp; #EveryVoterCounts</span>
     </div>
 
     <!-- Contact Section -->
     <section class="section" id="contact">
         <div class="section-title">
-            <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
             Contact & Volunteer
         </div>
         <div class="section-content">
@@ -719,11 +722,11 @@
     </div>
 
     <!-- Footer -->
-    <div class="footer">
+    <footer class="footer">
         &copy; 2024 Hon. Gisiri Maroa for Nyabasi West MCA. All Rights Reserved.
         <br>
         <a href="#vision">Vision</a> | <a href="#pillars">Pillars</a> | <a href="#engagement">Engage</a> | <a href="#analysis">Analysis</a>
-    </div>
+    </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
