--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hon. Gisiri Maroa | Nyabasi West MCA 2027</title>
     <meta name="description" content="Official campaign landing page for Hon. Gisiri Maroa, candidate for Nyabasi West MCA 2027. Join the movement for change, unity, and progress.">
-    <link rel="icon" type="image/png" href="/Gisiri blog/blog/images/gisiri logo.jpg">
+    <meta name="keywords" content="Gisiri Maroa, Nyabasi West, MCA 2027, Kenya, politics, campaign, poverty eradication, agriculture, youth empowerment">
+    <meta name="author" content="Hon. Gisiri Maroa Campaign Team">
+    <link rel="icon" type="image/png" href="blog/images/gisiri logo.jpg">
     <!-- Bootstrap 5.3 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts: Playfair Display & Inter -->
@@ -16,7 +18,7 @@
         body {
             font-family: 'Inter', 'Lato', Arial, sans-serif;
             background: linear-gradient(120deg, #181a1b 0%, #23272b 100%);
-            background-image: url('/Gisiri blog/blog/images/bg-pattern.jpg');
+            background-image: url('blog/images/bg-pattern.jpg');
             background-size: cover;
             background-attachment: fixed;
             min-height: 100vh;
@@ -321,7 +323,7 @@
         <div class="card shadow-lg p-4" style="max-width:900px;width:98vw;">
             <div class="card-body text-center">
                 <h2 class="mb-3" style="font-family:'Playfair Display',serif;font-weight:800;letter-spacing:0.09em;color:#ffc107;">
-                    <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="icon" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
+                    <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
                     Check In to Continue
                 </h2>
                 <p class="mb-4" style="font-size:1.18rem;letter-spacing:0.04em;color:#fff;">Please select your polling area to access the site.<br><span style="color:#43a047;font-weight:700;">We are growing....</span></p>
@@ -358,7 +360,7 @@
                         <li class="nav-item"><a class="nav-link" href="#pillars">Pillars</a></li>
                         <li class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
                         <li class="nav-item"><a class="nav-link" href="#join">Join</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Gisiri blog/blog.html/blog.html">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="blog/blog.html">Blog</a></li>
                     </ul>
                 </div>
             </div>
@@ -370,7 +372,7 @@
         <div class="container hero-content text-center">
             <div class="row align-items-center">
                 <div class="col-lg-5 mb-4 mb-lg-0">
-                    <img src="/Gisiri blog/blog/images/gisiri logo.jpg" alt="Hon. Gisiri Maroa" class="img-fluid rounded-circle shadow-lg" style="width: 260px; height: 260px; object-fit: cover; border: 8px solid #ffc107;">
+                    <img src="blog/images/gisiri logo.jpg" alt="Hon. Gisiri Maroa" class="img-fluid rounded-circle shadow-lg" style="width: 260px; height: 260px; object-fit: cover; border: 8px solid #ffc107;" loading="lazy">
                 </div>
                 <div class="col-lg-7 text-lg-start text-center">
                     <div class="hero-title">Hon. Gisiri Maroa</div>
@@ -381,7 +383,7 @@
                             I am committed to a new dawn for Nyabasi West—where every family thrives, every youth is empowered, and every farmer prospers. Together, let's build a future of dignity, opportunity, and hope for all.
                         </span>
                     </div>
-                    <a href="/Gisiri blog/blog.html/blog.html" class="hero-cta-btn">
+                    <a href="blog/blog.html" class="hero-cta-btn">
                         <i class="bi bi-arrow-right-circle-fill"></i> Visit Our Blog
                     </a>
                 </div>
@@ -394,19 +396,19 @@
         <div id="carouselGisiri" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner rounded-0 shadow">
                 <div class="carousel-item active">
-                    <img src="/Gisiri blog/blog/images/karokerario.jpg" class="carousel-img" alt="Gisiri Maroa with community">
+                    <img src="blog/images/karokerario.jpg" class="carousel-img" alt="Gisiri Maroa with community" loading="lazy">
                     <div class="carousel-caption d-none d-md-block">
                         With the people, for the people.
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/Gisiri blog/blog/images/extension.jpg" class="carousel-img" alt="Gisiri Maroa campaign event">
+                    <img src="blog/images/extension.jpg" class="carousel-img" alt="Gisiri Maroa campaign event" loading="lazy">
                     <div class="carousel-caption d-none d-md-block">
                         Campaigning for unity and progress.
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/Gisiri blog/blog/images/picture3.jpg" class="carousel-img" alt="Gisiri Maroa youth empowerment">
+                    <img src="blog/images/picture3.jpg" class="carousel-img" alt="Gisiri Maroa youth empowerment" loading="lazy">
                     <div class="carousel-caption d-none d-md-block">
                         Empowering youth for a brighter tomorrow.
                     </div>
@@ -509,7 +511,7 @@
         <div class="mb-4" style="font-size:1.18rem;">
             Be part of the change! Volunteer, share your ideas, or support Hon. Gisiri Maroa's campaign for a better Nyabasi West.
         </div>
-        <a href="/Gisiri blog/blog.html/blog.html" class="hero-cta-btn">
+        <a href="blog/blog.html" class="hero-cta-btn">
             <i class="bi bi-arrow-right-circle-fill"></i> Go to Blog
         </a>
         <div class="mt-4">
@@ -519,7 +521,7 @@
             <a href="tel:+254700000000" class="me-3 text-decoration-none" style="color:#1a237e;font-weight:600;">
                 <i class="bi bi-telephone-fill"></i> Call
             </a>
-            <a href="/Gisiri blog/blog.html/blog.html" class="text-decoration-none" style="color:#43a047;font-weight:600;">
+            <a href="blog/blog.html" class="text-decoration-none" style="color:#43a047;font-weight:600;">
                 <i class="bi bi-globe"></i> Blog
             </a>
         </div>
@@ -527,7 +529,7 @@
 
     <footer class="footer-landing">
         &copy; 2024 Hon. Gisiri Maroa for Nyabasi West MCA. All Rights Reserved.<br>
-        <a href="/Gisiri blog/blog.html/blog.html">Visit Our Blog</a>
+        <a href="blog/blog.html">Visit Our Blog</a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
@@ -773,6 +775,11 @@
         if (pollingAreas.includes(area)) {
             sessionStorage.setItem('checkedInArea', area);
         }
+    });
+
+    // Update all blog links to relative for GitHub Pages
+    document.querySelectorAll('a[href="/Gisiri blog/blog.html/blog.html"]').forEach(a => {
+        a.setAttribute('href', 'blog/blog.html');
     });
     </script>
 </body>
