--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Official blog for Hon. Gisiri Maroa, candidate for Nyabasi West MCA 2027. Join the movement for change, unity, and progress.">
     <meta name="keywords" content="Gisiri Maroa, Nyabasi West, MCA 2027, Kenya, politics, campaign, poverty eradication, agriculture, youth empowerment">
     <meta name="author" content="Hon. Gisiri Maroa Campaign Team">
-    <link rel="icon" type="image/png" href="blog/images/gisiri logo.jpg">
+    <link rel="icon" type="image/png" href="blog/images/gisiri logo.jpg" id="favicon">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Google Fonts -->
@@ -483,6 +483,12 @@
         body.dark-mode .social-icons a:hover {
             color: #fff;
         }
+        /* Favicon round border for browser tabs is not supported by browsers,
+           but we can make all in-page uses of the logo round. */
+        .favicon-round, .favicon-round-img {
+            border-radius: 50%;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
@@ -491,7 +497,7 @@
         <div class="card shadow-lg p-4" style="max-width:900px;width:98vw;border-radius:18px;background:#fff;">
             <div class="card-body text-center">
                 <h2 class="mb-3" style="font-family:'Playfair Display',serif;font-weight:800;letter-spacing:0.09em;color:#1a237e;">
-                    <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
+                    <img src="blog/images/gisiri logo.jpg" alt="icon" class="favicon-round-img" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
                     Check In to Continue
                 </h2>
                 <p class="mb-4" style="font-size:1.18rem;letter-spacing:0.04em;">Please select your polling area to access the blog.<br><span style="color:#43a047;font-weight:700;">We are growing....</span></p>
@@ -540,7 +546,7 @@
     <!-- Hero Section with Picture, Title, and Message -->
     <section class="hero-section">
         <div class="container hero-img-container">
-            <img src="blog/images/gisiri logo.jpg" alt="Hon. Gisiri Maroa" class="hero-img hero-img-large shadow-lg mb-3" loading="lazy">
+            <img src="blog/images/gisiri logo.jpg" alt="Hon. Gisiri Maroa" class="hero-img hero-img-large shadow-lg mb-3 favicon-round-img" loading="lazy">
             <div class="hero-title">Hon. Gisiri Maroa</div>
             <div class="hero-message">
                 <span style="font-size:1.25em;font-weight:700;">"Resilient. Determined. Ready for Change."</span><br>
@@ -562,14 +568,14 @@
 
     <!-- Slogan Banner -->
     <div class="slogan-banner">
-        <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+        <img src="blog/images/gisiri logo.jpg" alt="icon" class="favicon-round-img" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
         <span>#ResilientForNyabasi &nbsp; #GisiriForChange &nbsp; #Mchapakazi &nbsp; #AgriRevolution &nbsp; #EveryVoterCounts</span>
     </div>
 
     <!-- Check-in Feature (hidden, only bar after check-in) -->
     <section class="section" id="checkin" style="display:none;">
         <div class="section-title">
-            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" class="favicon-round-img" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
             We are growing....
         </div>
         <div class="section-content text-center">
@@ -585,7 +591,7 @@
     <!-- Vision Section -->
     <section class="section" id="vision">
         <div class="section-title">
-            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" class="favicon-round-img" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
             Our Vision for Nyabasi West
         </div>
         <div class="section-content">
@@ -605,7 +611,7 @@
     <!-- Campaign Pillars Section -->
     <section class="section" id="pillars">
         <div class="section-title">
-            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" class="favicon-round-img" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
             Our Campaign Pillars
         </div>
         <div class="campaign-pillars">
@@ -651,7 +657,7 @@
     <!-- Engagement Section -->
     <section class="section engagement-section" id="engagement">
         <div class="engagement-title">
-            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" class="favicon-round-img" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
             Engage. Participate. Decide.
         </div>
         <div class="engagement-content">
@@ -673,7 +679,7 @@
     <!-- Analysis Section -->
     <section class="section analysis-section" id="analysis">
         <div class="analysis-title">
-            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" class="favicon-round-img" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
             Scientific Campaign & Data-Driven Strategy
         </div>
         <div class="analysis-content">
@@ -692,14 +698,14 @@
 
     <!-- Slogan Banner -->
     <div class="slogan-banner">
-        <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
+        <img src="blog/images/gisiri logo.jpg" alt="icon" class="favicon-round-img" style="width:28px;height:28px;vertical-align:middle;margin-right:8px;">
         <span>#ResilientForNyabasi &nbsp; #GisiriForChange &nbsp; #EradicatePoverty &nbsp; #AgriRevolution &nbsp; #EveryVoterCounts</span>
     </div>
 
     <!-- Contact Section -->
     <section class="section" id="contact">
         <div class="section-title">
-            <img src="blog/images/gisiri logo.jpg" alt="icon" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
+            <img src="blog/images/gisiri logo.jpg" alt="icon" class="favicon-round-img" style="width:24px;height:24px;vertical-align:middle;margin-right:8px;">
             Contact & Volunteer
         </div>
         <div class="section-content">
