--- a/blog.html
+++ b/blog.html
@@ -546,7 +546,7 @@
     <!-- Hero Section with Picture, Title, and Message -->
     <section class="hero-section">
         <div class="container hero-img-container">
-            <img src="blog/images/gisiri logo.jpg" alt="Hon. Gisiri Maroa" class="hero-img hero-img-large shadow-lg mb-3 favicon-round-img" loading="lazy">
+            <img src="blog/images/gisiri logo.JPG" alt="Hon. Gisiri Maroa" class="hero-img hero-img-large shadow-lg mb-3 favicon-round-img" loading="lazy">
             <div class="hero-title">Hon. Gisiri Maroa</div>
             <div class="hero-message">
                 <span style="font-size:1.25em;font-weight:700;">"Resilient. Determined. Ready for Change."</span><br>
