--- a/blog.html
+++ b/blog.html
@@ -130,7 +130,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('blog/images/pattern.png') repeat;
+            background: url('blog/images/gisiri logo.PNG') repeat;
             opacity: 0.1;
             z-index: 0;
         }
