--- a/blog.html
+++ b/blog.html
@@ -728,7 +728,7 @@
     <!-- Hero Section -->
     <section class="hero-section" id="home">
         <div class="container text-center hero-content">
-            <img src="blog/images/gisiri logo.png" alt="Hon. Gisiri Maroa" class="hero-img">
+            <img src="blog/images/gisiri logo.PNG" alt="Hon. Gisiri Maroa" class="hero-img">
             <h1 class="hero-title">Hon. Gisiri Maroa</h1>
             <h2 class="hero-subtitle">Candidate for Nyabasi West MCA 2027</h2>
             <p class="hero-quote">"Resilient. Determined. Ready for Change. Together, we will build a future where every family thrives and every dream is possible."</p>
@@ -759,7 +759,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <img src="blog/images/gisiri logo.png" alt="About Hon. Gisiri Maroa" class="img-fluid rounded shadow">
+                    <img src="blog/images/gisiri logo.PNG" alt="About Hon. Gisiri Maroa" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="section-title">Our Vision for Nyabasi West</h2>
