--- a/blog.html
+++ b/blog.html
@@ -1090,7 +1090,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <a href="#" class="footer-logo">Gisiri Maroa</a>
+                    <a href="#" class="blog/images/gisiri logo.PNG">Gisiri Maroa</a>
                     <div class="footer-about">
                         <p>The official campaign for Hon. Gisiri Maroa, candidate for Nyabasi West MCA in the 2027 elections.</p>
                     </div>
