--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#platform">Platform</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="blog/blog.html">Blog</a></li>
+                        <li><a href="blog.html">Blog</a></li>
                     </ul>
                 </nav>
             </div>
@@ -627,8 +627,8 @@
                     <h3>Campaign HQ</h3>
                     <p>123 Unity Avenue<br>
                     Nyabasi West<br>
-                    Phone: (123) 456-7890<br>
-                    Email: info@gisirimaroa.com</p>
+                    Phone: (254) 728-560925<br>
+                    Email: gisirimaroa5@gmail.com</p>
                 </div>
                 <div class="footer-column">
                     <h3>Quick Links</h3>
@@ -637,7 +637,7 @@
                         <li><a href="#platform">Our Platform</a></li>
                         <li><a href="#">Volunteer</a></li>
                         <li><a href="#">Donate</a></li>
-                        <li><a href="blog/blog.html">Community live Updates</a></li>
+                        <li><a href="blog.html">Community live Updates</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
