--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#platform">Platform</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="/blog.html">Join our Community</a></li>
                     </ul>
                 </nav>
             </div>
