--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#platform">Platform</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="/blog.html">Join our Community</a></li>
+                        <li><a href="blog.html">Join our Community</a></li>
                     </ul>
                 </nav>
             </div>
@@ -535,7 +535,7 @@
                     </span>
                 </p>
                 <a href="#platform" class="btn btn-primary me-2">Our Action Plan</a>
-                <a href="blog/blog.html" class="btn btn-success"><i class="bi bi-journal-richtext"></i> Visit Our Blog</a>
+                <a href="blog.html" class="btn btn-success"><i class="bi bi-journal-richtext"></i> Visit Our Blog</a>
             </div>
         </div>
     </section>
@@ -544,7 +544,7 @@
         <div class="container">
             <div class="profile-section" id="about">
                 <div class="profile-image">
-                    <img src="blog/images/gisiri logo.png" alt="Hon. Gisiri Maroa">
+                    <img src="blog/images/gisiri logo.PNG" alt="Hon. Gisiri Maroa">
                 </div>
                 <div class="profile-text">
                     <h2>Your Voice in Government</h2>
