--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
     <div id="voterBurner" class="position-fixed end-0 z-3" style="bottom:80px;right:24px;animation: floatY 2.5s ease-in-out infinite alternate;cursor:pointer;">
         <span class="d-inline-block bg-warning rounded-pill px-4 py-2 shadow-lg fw-bold text-dark">
             <i class="bi bi-megaphone-fill text-success"></i>
-            Register as a Voter! <span class="d-none d-md-inline">Your vote, your future.</span>
+             Be a Voter! <span class="d-none d-md-inline">Your vote, your future.</span>
         </span>
     </div>
 
