--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
     <meta property="og:image" content="https://gisirimaroa2027.com/blog/images/gisiri-social-preview.jpg">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="blog/images/gisiri logo.PNG">
+    <link rel="icon" type="blog/images/gisiri logo.png" href="blog/images/gisiri logo.PNG">
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -130,7 +130,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('blog/images/gisiri logo.PNG') repeat;
+            background: src=('blog/images/sunflower.jpg') repeat;
             opacity: 0.1;
             z-index: 0;
         }
@@ -691,7 +691,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="blog/images/gisiri logo.PNG" alt="Hon. Gisiri Maroa">
+                <img src="blog/images/gisiri logo.png" alt="Hon. Gisiri Maroa">
                 Gisiri Maroa
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -728,7 +728,7 @@
     <!-- Hero Section -->
     <section class="hero-section" id="home">
         <div class="container text-center hero-content">
-            <img src="blog/images/gisiri logo.PNG" alt="Hon. Gisiri Maroa" class="hero-img">
+            <img src="blog/images/gisiri logo.png" alt="Hon. Gisiri Maroa" class="hero-img">
             <h1 class="hero-title">Hon. Gisiri Maroa</h1>
             <h2 class="hero-subtitle">Candidate for Nyabasi West MCA 2027</h2>
             <p class="hero-quote">"Resilient. Determined. Ready for Change. Together, we will build a future where every family thrives and every dream is possible."</p>
@@ -759,7 +759,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6 mb-4 mb-lg-0">
-                    <img src="blog/images/gisiri logo.PNG" alt="About Hon. Gisiri Maroa" class="img-fluid rounded shadow">
+                    <img src="blog/images/gisiri logo.png" alt="About Hon. Gisiri Maroa" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6">
                     <h2 class="section-title">Our Vision for Nyabasi West</h2>
@@ -1090,7 +1090,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <a href="#" class="blog/images/gisiri logo.PNG">Gisiri Maroa</a>
+                    <a href="#" class="blog/images/gisiri logo.png">Gisiri Maroa</a>
                     <div class="footer-about">
                         <p>The official campaign for Hon. Gisiri Maroa, candidate for Nyabasi West MCA in the 2027 elections.</p>
                     </div>
