--- a/blog.html
+++ b/blog.html
@@ -692,7 +692,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="blog/images/gisiri logo.png" alt="Hon. Gisiri Maroa">
-                Gisiri Maroa
+               Hon. Gisiri Maroa
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
