--- a/blog.html
+++ b/blog.html
@@ -692,7 +692,7 @@
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="blog/images/gisiri logo.png" alt="Hon. Gisiri Maroa">
-               Hon. Gisiri Maroa
+               Hon. Gisiri Maroa for MCA 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -799,8 +799,8 @@
                         <div class="pillar-icon">
                             <i class="fas fa-people-carry"></i>
                         </div>
-                        <h3 class="pillar-title">Poverty Eradication</h3>
-                        <p>No family should go hungry. We will launch targeted social programs, youth empowerment, and microfinance initiatives.</p>
+                        <h3 class="pillar-title">Value addition</h3>
+                        <p>Nyabasi West has agriculture potential. We will launch targeted value addition programs, youth empowerment, and microfinance initiatives. Together we will help change lives.</p>
                     </div>
                 </div>
                 
@@ -809,8 +809,8 @@
                         <div class="pillar-icon">
                             <i class="fas fa-tractor"></i>
                         </div>
-                        <h3 class="pillar-title">Agricultural Revolution</h3>
-                        <p>Agriculture is our backbone. We will support farmers with training, inputs, irrigation, and market linkages.</p>
+                        <h3 class="pillar-title">Culture and sports </h3>
+                        <p>Our rich culture will be monetized to create income opportunities. Our youths too need facilitation to uplift their skills and talents. We have a perfect plan that will ensure all areas are engaged.</p>
                     </div>
                 </div>
                 
@@ -820,7 +820,7 @@
                             <i class="fas fa-comments"></i>
                         </div>
                         <h3 class="pillar-title">Voter Engagement</h3>
-                        <p>Your voice matters! We use scientific analysis and digital tools to listen, learn, and act on your needs.</p>
+                        <p>Your voice matters! We use digital platforms to listen, learn, and act on your needs. All our programs will be made public to ensure everyone is actively participating and their inputs are considered.</p>
                     </div>
                 </div>
             </div>
@@ -836,7 +836,7 @@
                     <p>We want to hear from you! Share your views, ideas, and priorities for Nyabasi West.</p>
                     <ul class="mb-4">
                         <li>Take part in our community surveys and scientific polls</li>
-                        <li>Join our WhatsApp groups and digital townhalls</li>
+                        <li>Join our WhatsApp groups and digital platforms</li>
                         <li>Volunteer for door-to-door campaigns</li>
                         <li>Follow us on social media for updates</li>
                     </ul>
