--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hon. Gisiri Maroa for Nyabasi West MCA 2027</title>
+    <title>Hon. Gisiri Maroa-2027</title>
     <meta name="description" content="Official blog for Hon. Gisiri Maroa, candidate for Nyabasi West MCA 2027. Join the movement for change, unity, and progress.">
     <meta name="keywords" content="Gisiri Maroa, Nyabasi West, MCA 2027, Kenya, politics, campaign, poverty eradication, agriculture, youth empowerment">
     <meta name="author" content="Hon. Gisiri Maroa Campaign Team">
@@ -1526,4 +1526,5 @@
     </script>
 </body>
 </html>
+
 
