--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
     <!-- Check-in Modal -->
     <div class="blur-overlay" id="checkInOverlay" style="display:none;">
         <div class="check-in-modal">
-            <h2>Welcome to Our Campaign</h2>
+            <h2>Welcome to Our Official Campaign</h2>
             <p>
                 To better serve you, please let us know your polling area in Nyabasi West.<br>
                 <span class="text-success fw-bold">We are growing....</span>
@@ -509,7 +509,9 @@
     <header>
         <div class="container">
             <div class="header-content">
-                <div class="logo">Hon. Gisiri Maroa<span> | Nyabasi West</span></div>
+                <div class="logo">Hon. Gisiri Maroa<span> | Nyabasi West</span>
+                <img src="blog/images/gisiri logo.PNG" alt="Hon. Gisiri Maroa">
+                </div>
                 <nav>
                     <ul>
                         <li><a href="#about">About</a></li>
@@ -563,19 +565,19 @@
                     <h2 class="text-center mb-4 text-white">Community Support</h2>
                     <div class="stats-grid" id="statsDisplay">
                         <div class="stat-item">
-                            <div class="stat-number" id="totalCheckIns">0</div>
+                            <div class="stat-number" id="totalCheckIns">8,286</div>
                             <div class="stat-label">Total Supporters</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" id="Bitorogwe">0</div>
+                            <div class="stat-number" id="Bitorogwe">146</div>
                             <div class="stat-label">Bitorogwe</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" id="Chinato">0</div>
+                            <div class="stat-number" id="Chinato">640</div>
                             <div class="stat-label">Chinato</div>
                         </div>
                         <div class="stat-item">
-                            <div class="stat-number" id="Gibarori">0</div>
+                            <div class="stat-number" id="Gibarori">820</div>
                             <div class="stat-label">Gibarori</div>
                         </div>
                     </div>
